--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "data": [
         {
          "type": "bar",
-         "uid": "32efe92c-a8a7-11e9-b831-a59a6d9a9151",
+         "uid": "f7e0d9f8-a8a7-11e9-b831-a59a6d9a9151",
          "x": [
           "jack",
           "jill",
@@ -287,7 +287,7 @@
         },
         {
          "type": "bar",
-         "uid": "32efeb3e-a8a7-11e9-b831-a59a6d9a9151",
+         "uid": "f7e0dbf6-a8a7-11e9-b831-a59a6d9a9151",
          "x": [
           "jack",
           "jill",
@@ -307,10 +307,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"20b3f854-07bd-423f-89c9-2cf7b84d0021\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"20b3f854-07bd-423f-89c9-2cf7b84d0021\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"32f5bd16-a8a7-11e9-b831-a59a6d9a9151\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"32f5bf00-a8a7-11e9-b831-a59a6d9a9151\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"8adbc82d-68c8-4eb4-9a98-bce1f7709fe8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8adbc82d-68c8-4eb4-9a98-bce1f7709fe8\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"f7e67d7c-a8a7-11e9-b831-a59a6d9a9151\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"f7e67f48-a8a7-11e9-b831-a59a6d9a9151\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"20b3f854-07bd-423f-89c9-2cf7b84d0021\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"20b3f854-07bd-423f-89c9-2cf7b84d0021\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"32f5bd16-a8a7-11e9-b831-a59a6d9a9151\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"32f5bf00-a8a7-11e9-b831-a59a6d9a9151\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"8adbc82d-68c8-4eb4-9a98-bce1f7709fe8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8adbc82d-68c8-4eb4-9a98-bce1f7709fe8\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"f7e67d7c-a8a7-11e9-b831-a59a6d9a9151\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"f7e67f48-a8a7-11e9-b831-a59a6d9a9151\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "trace0 = {'type': 'li', 'x': ['jack', 'jill', 'sandy', 'blaise'], 'y': [8, 11, 8, 13, 6, 4]}\n",
+    "trace0 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'blaise'], 'y': [8, 11, 8, 13, 6, 4]}\n",
     "trace1 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'gob'], 'y': [4, 12, 3, 14, 8, 1]}\n",
     "\n",
     "\n",
